kube/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: staging
    networking.gke.io/managed-certificates: staging-unwanted-fun
  name: staging-ingress
